수상자 인포 선택자 변경

--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -211,13 +211,13 @@
                   <div class="txtbox">
                     <ul class="subtitle">
                       <li>
-                        <p>Title : The Fire Inside</p>
+                        <b>Title : The Fire Inside</b>
                       </li>
                       <li>
-                        <p>Nickname : rainyroom</p>
+                        <b>Nickname : rainyroom</b>
                       </li>
                       <li>
-                        <em>Acceptance comment:
+                        <p>Acceptance comment:
                           <br />
                           “I wanted to express how a single word, or even a typo, can hold deep
                           emotions—regret, forgiveness, and pain. The drama The Glory inspired
@@ -225,11 +225,11 @@
                           feels surreal, and I’m grateful to everyone who connected with my
                           work. This moment reminds me that even small mistakes can lead to
                           meaningful stories.”
-                        </em>
+                        </p>
                       </li>
                     </ul>
                   </div><!-- .txtbox -->
-                  <div class="goldimg"></div>
+                  <div id="goldimg"></div>
                 </div><!-- .award-info -->
                 <div class="circles">
                   <div class="blur-1"></div>
@@ -246,13 +246,13 @@
                   <div class="txtbox">
                     <ul class="subtitle">
                       <li>
-                        <p>Title : Typo of Sorry</p>
+                        <b>Title : Typo of Sorry</b>
                       </li>
                       <li>
-                        <p>Nickname : bloom</p>
+                        <b>Nickname : bloom</b>
                       </li>
                       <li>
-                        <em>Acceptance comment:
+                        <p>Acceptance comment:
                           <br />
                           “I truly enjoyed watching The Glory, and many of its scenes stayed
                           with me long after. I created this video inspired by the unspoken
@@ -260,11 +260,11 @@
                           honor to receive this award, and I’m thankful for the chance to share
                           my interpretation. This experience motivates me to keep creating
                           stories that connect with others.”
-                        </em>
+                        </p>
                       </li>
                     </ul>
                   </div><!-- .txtbox -->
-                  <div class="silverimg"></div>
+                  <div id="silverimg"></div>
                 </div><!-- .award-info -->
                 <div class="circles">
                   <div class="blur-1"></div>
@@ -281,24 +281,24 @@
                   <div class="txtbox">
                     <ul class="subtitle">
                       <li>
-                        <p>Title : Read Receipt, Unsent</p>
+                        <b>Title : Read Receipt, Unsent</b>
                       </li>
                       <li>
-                        <p>Nickname : mintlatte</p>
+                        <b>Nickname : mintlatte</b>
                       </li>
                       <li>
-                        <em>Acceptance comment:
+                        <p>Acceptance comment:
                           <br />
                           “My goal was to win the Gold Award, but receiving the Popular Choice
                           still feels deeply rewarding. This project took a lot of effort and
                           late nights, so being recognized by viewers means a lot to me. It’s
                           heartwarming to know that people connected with my work. I’ll remember
                           this encouragement and keep challenging myself to do even better.”
-                        </em>
+                        </p>
                       </li>
                     </ul>
                   </div><!-- .txtbox -->
-                  <div class="popularimg"></div>
+                  <div id="popularimg"></div>
                 </div><!-- .award-info -->
                 <div class="circles">
                   <div class="blur-1"></div>
@@ -312,7 +312,7 @@
 
       <!-- 진행중인 공모전 -->
       <section class="running-contest">
-        <div class="inner">
+        <div class="sect_inner">
           <div class="title">
             <h2>Running Contest</h2>
           </div>
@@ -372,7 +372,7 @@
             </div>
           </div>
           <!-- 1. 팬아트 카테고리 -->
-          <div class="fanarts active"><!-- IM뱅크 작업파일 참고하기 -->
+          <div class="fanarts active">
             <div class="wrap inner">
               <div class="con img_popular">
                 <h4>🔥 ‍Popular</h4>
@@ -384,11 +384,11 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Sweet Home Fan Art</b></li>
-                            <li>ArtLover</li>
+                            <li>Atti</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>5.1k</p>
                           </div>
                         </div>
                       </div>
@@ -403,7 +403,7 @@
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>4.8k</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -418,7 +418,7 @@
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>4.2k</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -433,7 +433,7 @@
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>3.4k</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -448,7 +448,7 @@
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>2.7k</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -463,7 +463,7 @@
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>2.2k</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -478,7 +478,7 @@
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>1.2k</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -502,7 +502,7 @@
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>204</p>
                           </div>
                         </div><!-- info-overay -->
                       </div>
@@ -512,12 +512,12 @@
                         <img class="fan-img" src="./moon/asset/fanimg_2_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>2Sweet Home Fan Art</b></li>
+                            <li><b>I drew Lee Chaemin</b></li>
                             <li>rainy_day</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>195</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -527,12 +527,12 @@
                         <img class="fan-img" src="./moon/asset/fanimg_3_new.jpeg" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>3Sweet Home Fan Art</b></li>
+                            <li><b>I made Songgang from Sweet Home in Disney style</b></li>
                             <li>moondust</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>170</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -542,12 +542,12 @@
                         <img class="fan-img" src="./moon/asset/fanimg_4_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>4Sweet Home Fan Art</b></li>
+                            <li><b>I drew Park Seo-jun from Kyungsung Kritzer, what do you think?</b></li>
                             <li>Sketchy</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>158</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -557,12 +557,12 @@
                         <img class="fan-img" src="./moon/asset/fanimg_5_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>5Sweet Home Fan Art</b></li>
+                            <li><b>It's Marry My Husband's Nine-Woo Disney style.</b></li>
                             <li>cozy_corner</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>140</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -572,12 +572,12 @@
                         <img class="fan-img" src="./moon/asset/fanimg_6_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>6Sweet Home Fan Art</b></li>
+                            <li><b>I liked this scene from Twenty Five, Twenty One, so I drew it.</b></li>
                             <li>crafty_crab</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>110</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -587,12 +587,12 @@
                         <img class="fan-img" src="./moon/asset/fanimg_7_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>7Sweet Home Fan Art</b></li>
+                            <li><b>Suzy was so pretty in this scene that I drew it.</b></li>
                             <li>Vivi</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
-                            <p>5.6k</p>
+                            <p>82</p>
                           </div>
                         </div><!-- info-overlay -->
                       </div>
@@ -1029,68 +1029,68 @@
     </main>
 
 
-    <!-- 푸터 -->
-    <footer class="ver_white">
-      <div class="footer_inner">
-        <!-- Top Area -->
-        <div class="footer_top">
-          <div class="footer_menu">
-            <div class="footer_gnb">
-              <a href="#" class="footer_gnb_link home">Home</a>
-              <div class="footer_gnb_wrap">
-                <ul class="footer_gnb_list">
-                  <li><a href="#" class="footer_gnb_link">Hotline</a></li>
-                  <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
-                  <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
-                  <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
-                </ul><!-- //.footer_gnb_list -->
+    <!-- 푸터 시작 -->
+        <footer class="ver_dark ver_white">
+            <div class="footer_inner">
+                <!-- Top Area -->
+                <div class="footer_top">
+                    <div class="footer_menu">
+                        <div class="footer_gnb">
+                            <a href="index.html" class="footer_gnb_link home">Home</a>
+                            <div class="footer_gnb_wrap">
+                                <ul class="footer_gnb_list">
+                                    <li><a href="#" class="footer_gnb_link">Hotline</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
+                                </ul><!-- //.footer_gnb_list -->
 
-                <div class="footer_family_site">
-                  <ul class="family_site_list">
-                    <li><a href="#" class="family_site_link">CJ ENM</a></li>
-                    <li><a href="#" class="family_site_link">CJ GROUP</a></li>
-                    <li class="family_site_btn_wrap">
-                      <button type="button" class="family_site_btn">
-                        <span>Family Site</span>
-                        <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
-                      </button>
-                    </li>
-                  </ul><!-- //.family_site_list -->
-                </div><!-- //.footer_family_site -->
-              </div><!-- //.footer_gnb_wrap -->
-            </div><!-- //.footer_gnb -->
-          </div><!-- //.footer_menu -->
-        </div><!-- //.footer_top -->
+                                <div class="footer_family_site">
+                                    <ul class="family_site_list">
+                                        <li><a href="#" class="family_site_link">CJ ENM</a></li>
+                                        <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                                        <li class="family_site_btn_wrap">
+                                            <button type="button" class="family_site_btn">
+                                                <span>Family Site</span>
+                                                <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
+                                            </button>
+                                        </li>
+                                    </ul><!-- //.family_site_list -->
+                                </div><!-- //.footer_family_site -->
+                            </div><!-- //.footer_gnb_wrap -->
+                        </div><!-- //.footer_gnb -->
+                    </div><!-- //.footer_menu -->
+                </div><!-- //.footer_top -->
 
-        <!-- Bottom Area -->
-        <div class="footer_bottom">
-          <div class="footer_brand">
-            <div class="footer_logo">
+                <!-- Bottom Area -->
+                <div class="footer_bottom">
+                    <div class="footer_brand">
+                        <div class="footer_logo">
 
-            </div><!-- //.footer_logo -->
+                        </div><!-- //.footer_logo -->
 
-            <div class="footer_sns">
-              <a href="#" class="sns_link" aria-label="Facebook">
-                <img src="asset/facebook.svg" alt="Facebook">
-              </a>
-              <a href="#" class="sns_link" aria-label="YouTube">
-                <img src="asset/youtube.svg" alt="YouTube">
-              </a>
-              <a href="#" class="sns_link" aria-label="Instagram">
-                <img src="asset/Instagram.svg" alt="Instagram">
-              </a>
-            </div><!-- //.footer_sns -->
-          </div><!-- //.footer_brand -->
+                        <div class="footer_sns">
+                            <a href="#" class="sns_link" aria-label="Facebook">
+                                <img src="asset/facebook.svg" alt="Facebook">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="YouTube">
+                                <img src="asset/youtube.svg" alt="YouTube">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="Instagram">
+                                <img src="asset/Instagram.svg" alt="Instagram">
+                            </a>
+                        </div><!-- //.footer_sns -->
+                    </div><!-- //.footer_brand -->
 
-          <div class="footer_info">
-            <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul,
-              Republic of Korea | Business registration number : 747-81-00388</p>
-            <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
-          </div><!-- //.footer_info -->
-        </div><!-- //.footer_bottom -->
-      </div><!-- //.footer_inner -->
-    </footer><!-- //.footer -->
+                    <div class="footer_info">
+                        <p class="footer_info_text">CEO : Jang Kyung-ik</p>
+                        <p class="footer_info_text">Studio Dragon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
+                        <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
+                    </div><!-- //.footer_info -->
+                </div><!-- //.footer_bottom -->
+            </div><!-- //.footer_inner -->
+        </footer><!-- //.footer -->
+        <!-- 여기까지 푸터 -->
   </div>
 </body>
 
