--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="We Are Studio Dragon">
+  <meta name="keywords" content="Studio Dragon, a premium storyteller group">
+  <meta name="author" content="Team 2eezy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Studio Dragon">
+  <meta property="og:description" content="Studio Dragon, a premium storyteller group">
+  <meta property="og:image" content="	https://root-ryu.github.io/StudioDragon/asset/og_img.png">
+  <meta property="og:url" content="https://root-ryu.github.io/StudioDragon/">
+  <title>list of work</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/reset.css">
@@ -11,6 +20,7 @@
   <link rel="stylesheet" href="./css/main_media.css">
   <link rel="stylesheet" href="./lee/css/style.css">
   <link rel="stylesheet" href="./lee/css//media.css">
+  <link rel="stylesheet" href="./css/cursor.css">
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -23,81 +33,154 @@
 
   <!-- SplitText 플러그인 -->
   <!-- <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script> -->
-  <script src="/js/common.js"></script>
-  <script src="/lee/js/filter.js" defer></script>
+  <script src="./js/common.js"></script>
+  <script src="./js/cursor.js"></script>
+  <script src="lee/js/filter.js" defer></script>
 
-  <title>list of work</title>
 </head>
 
 <body>
-
-  <div id="star-container"></div>
+  <canvas id="cursorCanvas"></canvas>
+  <!--   <div id="star-container"></div> -->
 
   <div class="wrap">
     <div class="header_bg">
     </div>
     <header class="">
       <div class="inner">
-        <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+        <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
         <nav class="">
           <ul class="gnb">
-            <li class=""><a href="#">ABOUT</a>
+            <li class=""><a href="intro.html" class="t">ABOUT</a>
               <ul class="sub">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Business Ethics</a></li>
-                <li><a href="#">Partnerships</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">CEO Message</a></li>
-                <li><a href="#">Contact & Location</a></li>
+                <li><a href="intro.html" class="t_small">About Us</a></li>
+                <li><a href="index.html">Business Ethics</a></li>
+                <li><a href="index.html">Partnerships</a></li>
+                <li><a href="index.html">History</a></li>
+                <li><a href="index.html">CEO Message</a></li>
+                <li><a href="index.html">Contact & Location</a></li>
               </ul>
             </li>
-            <li><a href="#">WORKS</a>
+            <li><a href="Listworks_lee.html" class="t">WORKS</a>
               <ul class="sub">
-                <li><a href="#">Production List</a></li>
-                <li><a href="#">Viewer Participation</a></li>
+                <li><a href="Listworks_lee.html" class="t_small">Production List</a></li>
+                <li><a href="viewersplayground_moon.html" class="t_small">Viewer Participation</a></li>
               </ul>
             </li>
-            <li><a href="#">NEWSROOM</a>
+            <li><a href="index.html">NEWSROOM</a>
               <ul class="sub">
-                <li><a href="#">Notice</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="index.html">Notice</a></li>
+                <li><a href="index.html">News</a></li>
               </ul>
             </li>
-            <li><a href="#">IR</a>
-              <ul class="sub">
-                <li><a href="#">IR Insights</a></li>
-                <li><a href="#">Materials</a></li>
+            <li><a href="IR.html" class="t_ir">IR</a>
+              <ul class="sub ">
+                <li><a href="IR.html" class="t_small">IR Insights</a></li>
+                <li><a href="index.html">Materials</a></li>
               </ul>
             </li>
-            <li><a href="#">SUSTAINABILITY</a>
+            <li><a href="index.html">SUSTAINABILITY</a>
               <ul class="sub">
-                <li><a href="#">Sustainability Story</a></li>
-                <li><a href="#">Sustainability Activities</a></li>
-                <li><a href="#">Sustainability Report</a></li>
-                <li><a href="#">ESG Ratings</a></li>
-                <li><a href="#">Sustainability Report</a></li>
+                <li><a href="index.html">Sustainability Story</a></li>
+                <li><a href="index.html">Sustainability Activities</a></li>
+                <li><a href="index.html">Sustainability Report</a></li>
+                <li><a href="index.html">ESG Ratings</a></li>
+                <li><a href="index.html">Sustainability Report</a></li>
               </ul>
             </li>
           </ul><!-- //.gnb -->
           <div class="right">
-            <div class="lang ">
-              <a href="#" class="en">EN</a>
-              <a href="#" class="kr">KR</a>
+            <div class="lang">
+              <a href="#" class="en active">EN</a>
+              <a href="#" class="kr ">KR</a>
             </div><!-- //.lang -->
             <div class="user">
-              <a href="#"><img src="back/img/user.png" alt="user"></a>
+              <a href=""><img src="back/img/user.png" alt="user"></a>
             </div><!-- //.user -->
-            <div class="ham">
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-              </ul>
-            </div>
+            <div class="nav_ham">
+              <img src="asset/nav_ham.svg" alt="">
+            </div><!-- //.nav_ham -->
           </div><!-- //.right -->
         </nav>
       </div><!-- //.inner -->
     </header>
+
+    <!-- 햄버거 메뉴 독립 배치 -->
+    <div class="ham">
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+
+    <!-- 햄버거 메뉴 네비게이션 -->
+    <nav class="ham_nav">
+      <div class="menu_header">
+        <div class="language_switcher">
+          <a href="#" class="lang_link active">EN</a>
+          <a href="#" class="lang_link">KO</a>
+        </div>
+
+        <div class="menu_icons">
+          <a href="#" class="icon_link">
+            <img src="back/img/user.png" alt="Profile">
+          </a>
+          <button type="button" class="icon_link close_btn">
+            <img src="./asset/x-circle.svg" alt="">
+          </button>
+        </div>
+      </div>
+
+      <ul class="main_nav">
+        <li class="nav_item">
+          <a href="intro.html" class="main_category">ABOUT</a>
+          <ul class="submenu">
+            <li><a href="intro.html">About Us</a></li>
+            <li><a href="index.html">Business Ethics</a></li>
+            <li><a href="index.html">Partnerships</a></li>
+            <li><a href="index.html">History</a></li>
+            <li><a href="index.html">CEO Message</a></li>
+            <li><a href="index.html">Contact & Location</a></li>
+          </ul>
+        </li>
+
+        <li class="nav_item">
+          <a href="Listworks_lee.html" class="main_category">WORKS</a>
+          <ul class="submenu">
+            <li><a href="Listworks_lee.html">Production List</a></li>
+            <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
+          </ul>
+        </li>
+
+        <li class="nav_item">
+          <a href="index.html" class="main_category">NEWSROOM</a>
+          <ul class="submenu">
+            <li><a href="index.html">Notice</a></li>
+            <li><a href="index.html">News</a></li>
+          </ul>
+        </li>
+
+        <li class="nav_item">
+          <a href="IR.html" class="main_category">IR</a>
+          <ul class="submenu">
+            <li><a href="IR.html">IR Insights</a></li>
+            <li><a href="index.html">Materials</a></li>
+          </ul>
+        </li>
+
+        <li class="nav_item">
+          <a href="index.html" class="main_category">SUSTAINABILITY</a>
+          <ul class="submenu">
+            <li><a href="index.html">Sustainability Story</a></li>
+            <li><a href="index.html">Sustainability Activities</a></li>
+            <li><a href="index.html">Sustainability Report</a></li>
+            <li><a href="index.html">ESG Ratings</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav><!-- //.ham_nav -->
+    <!-- 여기까지 헤더 -->
 
 
     <!-- https://codepen.io/iamryanyu/pen/PwZoovK !!!!!!!!!!-->
@@ -177,13 +260,15 @@
 
 
     <section class="last-section">
-      <h2>signature - works</h2>
+      <h2>signature works</h2>
+      <button class="more-btn">More</button>
       <div class="slide inner">
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide"><a href="#"><img src="lee/img/Queen_of_Tears.webp" alt="">
                 <span>Queen of Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="lee/img/The_Glory4.jpg" alt=""><span>The
+            <div class="swiper-slide"><a href="./work_ryu.html"><img src="lee/img/The_Glory4.jpg" alt=""><span
+                  class="t_the">The
                   Glory</span></a></div>
             <div class="swiper-slide"><a href="#"><img src="lee/img/Marry_My_Husband.jpg" alt=""><span>Marry My
                   Husband</span></a></div>
@@ -203,7 +288,7 @@
     </section>
 
     <section class="onAir-section">
-      <h2 class="on-alr">ON - AIR</h2>
+      <h2 class="on-alr">ON-AIR</h2>
       <div class="button-group">
         <button class="all">ALL</button>
         <button class="alr">AIR</button>
@@ -339,6 +424,129 @@
         </li>
       </ul>
 
+      <ul class="poster-list2">
+        <li>
+          <a href="#">
+            <img src="./lee/img/Our_Blooming_Youth.webp" alt="Poster 1">
+            <span class="poster-title">Our Blooming Youth</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Love_take_two.webp" alt="Poster 2">
+            <span class="poster-title">Love take two</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/My_Dearest_Nemesis2.webp" alt="Poster 3">
+            <span class="poster-title">My Dearest Nemesis</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/our_Blues.jpg" alt="Poster 4">
+            <span class="poster-title">Our Blues</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Twenty_Five_Twenty.webp" alt="Poster 5">
+            <span class="poster-title">Twenty Five Twenty One</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Genie_Make_Wish.webp" alt="Poster 6">
+            <span class="poster-title">Genie, Make A Wish</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Typhoon_Family2.webp" alt="Poster 7">
+            <span class="poster-title">Typhoon Family</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/The_Queen_Crowns.webp" alt="Poster 8">
+            <span class="poster-title">The Queen Who Crowns</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Our_Unwritten_Seoul.webp" alt="Poster 9">
+            <span class="poster-title">Our Unwritten Seoul</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Under_The_Queens.webp" alt="Poster 10">
+            <span class="poster-title">Under The Queen's <br> Umbrella</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Poong_Psychiatrist.webp" alt="Poster 11">
+            <span class="poster-title">Poong, the Joseon <br> Psychiatrist</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/shin's2.webp" alt="Poster 12">
+            <span class="poster-title">shin's project</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Dear_Hongrang.webp" alt="Poster 13">
+            <span class="poster-title">Dear Hongrang</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Bon_Majesty.webp" alt="Poster 14">
+            <span class="poster-title">Bon Apptit, Your Majesty</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Second_Shot_Love.webp" alt="Poster 15">
+            <span class="poster-title">Second Shot at Love</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Castaway_Diva4.webp" alt="Poster 16">
+            <span class="poster-title">Castaway Diva</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Head_Over_Heels.webp" alt="Poster 17">
+            <span class="poster-title">Head Over Heels</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Captivating_the_King.webp" alt="Poster 18">
+            <span class="poster-title">Captivating the King</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/Study_Group.webp" alt="Poster 19">
+            <span class="poster-title">Study Group</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./lee/img/love_your_enemy.webp" alt="Poster 20">
+            <span class="poster-title">love your enemy</span>
+          </a>
+        </li>
+      </ul>
+
 
       <div class="pagination-search">
         <div class="search-box">
@@ -351,10 +559,10 @@
             <li>
               <a href="#">Prev</a>
             </li>
-            <li>
-              <a href="#">1</a>
-            </li>
             <li class="active">
+              <a href="">1</a>
+            </li>
+            <li>
               <a href="#">2</a>
             </li>
             <li>
@@ -409,13 +617,14 @@
       </div>
     </section> -->
 
-    <footer class="footer">
+    <!-- 푸터 시작 -->
+    <footer class="ver_dark ver_white">
       <div class="footer_inner">
         <!-- Top Area -->
         <div class="footer_top">
           <div class="footer_menu">
             <div class="footer_gnb">
-              <a href="#" class="footer_gnb_link home">Home</a>
+              <a href="index.html" class="footer_gnb_link home">Home</a>
               <div class="footer_gnb_wrap">
                 <ul class="footer_gnb_list">
                   <li><a href="#" class="footer_gnb_link">Hotline</a></li>
@@ -425,14 +634,15 @@
                 </ul><!-- //.footer_gnb_list -->
 
                 <div class="footer_family_site">
-                  <button type="button" class="family_site_btn">
-                    <span>Family Site</span>
-                    <img src="https://www.figma.com/api/mcp/asset/197702ac-94a3-4f96-8d2d-799feadd2429" alt="arrow"
-                      class="family_site_arrow">
-                  </button>
                   <ul class="family_site_list">
                     <li><a href="#" class="family_site_link">CJ ENM</a></li>
                     <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                    <li class="family_site_btn_wrap">
+                      <button type="button" class="family_site_btn">
+                        <span>Family Site</span>
+                        <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
+                      </button>
+                    </li>
                   </ul><!-- //.family_site_list -->
                 </div><!-- //.footer_family_site -->
               </div><!-- //.footer_gnb_wrap -->
@@ -444,30 +654,32 @@
         <div class="footer_bottom">
           <div class="footer_brand">
             <div class="footer_logo">
-              <img src="./asset/Studio Dragon_symbol.svg" alt="Studio Dragon">
+
             </div><!-- //.footer_logo -->
+
             <div class="footer_sns">
               <a href="#" class="sns_link" aria-label="Facebook">
-                <img src="https://www.figma.com/api/mcp/asset/5800100e-1025-4331-93b9-282625c7d4cb" alt="Facebook">
+                <img src="asset/facebook.svg" alt="Facebook">
               </a>
               <a href="#" class="sns_link" aria-label="YouTube">
-                <img src="https://www.figma.com/api/mcp/asset/be09f0e9-409a-4ee6-a049-4c9ae3290332" alt="YouTube">
+                <img src="asset/youtube.svg" alt="YouTube">
               </a>
               <a href="#" class="sns_link" aria-label="Instagram">
-                <img src="https://www.figma.com/api/mcp/asset/407868c3-bc59-4607-af72-b9d6ef547455" alt="Instagram">
+                <img src="asset/Instagram.svg" alt="Instagram">
               </a>
             </div><!-- //.footer_sns -->
           </div><!-- //.footer_brand -->
 
           <div class="footer_info">
             <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul, Republic of
+            <p class="footer_info_text">Studio Dragon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu Seoul, Republic of
               Korea | Business registration number : 747-81-00388</p>
             <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
           </div><!-- //.footer_info -->
         </div><!-- //.footer_bottom -->
       </div><!-- //.footer_inner -->
     </footer><!-- //.footer -->
+    <!-- 여기까지 푸터 -->
   </div><!-- //.wrap -->
   </script>
 </body>
