--- a/work_ryu.html
+++ b/work_ryu.html
@@ -771,7 +771,7 @@
                                 <div class="profile">
                                     <div class="profile_icon">
                                         <img class="icon_bg"
-                                            src="https://www.figma.com/api/mcp/asset/953db616-409e-4919-996d-6953483c5840"
+                                            src="./Work_Ryu/asset/icon_bg_green.svg"
                                             alt="">
                                         <img class="icon_img"
                                             src="Work_Ryu/asset/icon_Yongsoon.png"
@@ -789,9 +789,9 @@
                                     </div><!-- //.chat_box -->
                                     <div class="like_box">
                                         <img class="heart_icon active"
-                                            src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-active-src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-inactive-src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
+                                            src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-active-src="Work_Ryu/asset/icon_heart_active.svg"
+                                            data-inactive-src="Work_Ryu/asset/icon_heart_unactive.svg"
                                             alt="">
                                         <span class="like_count">6,187</span>
                                     </div><!-- //.like_box -->
@@ -813,10 +813,10 @@
                                 <div class="profile">
                                     <div class="profile_icon">
                                         <img class="icon_bg"
-                                            src="https://www.figma.com/api/mcp/asset/80e87da1-20be-43bb-89d3-7e0db1ef6b6c"
+                                            src="./Work_Ryu/asset/icon_bg_purple.svg"
                                             alt="">
                                         <img class="icon_img"
-                                            src="https://www.figma.com/api/mcp/asset/a70db404-ce08-4a17-af87-c1bb40d0c76a"
+                                            src="./Work_Ryu/asset/icon_Yongsoon.png"
                                             alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
@@ -832,9 +832,9 @@
                                     </div><!-- //.chat_box -->
                                     <div class="like_box">
                                         <img class="heart_icon active"
-                                            src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-active-src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-inactive-src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
+                                            src="./Work_Ryu/asset/icon_heart_unactive.svg"
+                                            data-active-src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-inactive-src="./Work_Ryu/asset/icon_heart_unactive.svg"
                                             alt="">
                                         <span class="like_count">3,910</span>
                                     </div><!-- //.like_box -->
@@ -856,10 +856,10 @@
                                 <div class="profile">
                                     <div class="profile_icon">
                                         <img class="icon_bg"
-                                            src="https://www.figma.com/api/mcp/asset/fd5abdae-23df-4e9a-afc2-db221c180faf"
+                                            src="./Work_Ryu/asset/icon_bg_yellow.svg"
                                             alt="">
                                         <img class="icon_img"
-                                            src="https://www.figma.com/api/mcp/asset/a70db404-ce08-4a17-af87-c1bb40d0c76a"
+                                            src="./Work_Ryu/asset/icon_Yongsoon.png"
                                             alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
@@ -875,9 +875,9 @@
                                     </div><!-- //.chat_box -->
                                     <div class="like_box">
                                         <img class="heart_icon"
-                                            src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
-                                            data-active-src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-inactive-src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
+                                            src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-active-src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-inactive-src="./Work_Ryu/asset/icon_heart_unactive.svg"
                                             alt="">
                                         <span class="like_count">2,766</span>
                                     </div><!-- //.like_box -->
@@ -899,10 +899,10 @@
                                 <div class="profile">
                                     <div class="profile_icon">
                                         <img class="icon_bg"
-                                            src="https://www.figma.com/api/mcp/asset/fd5abdae-23df-4e9a-afc2-db221c180faf"
+                                            src="./Work_Ryu/asset/icon_bg_yellow.svg"
                                             alt="">
                                         <img class="icon_img"
-                                            src="https://www.figma.com/api/mcp/asset/ba5b7a69-fa2e-426c-a77a-4cf199c2834d"
+                                            src="./Work_Ryu/asset/icon_Yongsik.png"
                                             alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
@@ -918,9 +918,9 @@
                                     </div><!-- //.chat_box -->
                                     <div class="like_box">
                                         <img class="heart_icon active"
-                                            src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-active-src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-inactive-src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
+                                            src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-active-src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-inactive-src="./Work_Ryu/asset/icon_heart_unactive.svg"
                                             alt="">
                                         <span class="like_count">1,885</span>
                                     </div><!-- //.like_box -->
@@ -942,10 +942,10 @@
                                 <div class="profile">
                                     <div class="profile_icon">
                                         <img class="icon_bg"
-                                            src="https://www.figma.com/api/mcp/asset/953db616-409e-4919-996d-6953483c5840"
+                                            src="./Work_Ryu/asset/icon_bg_green.svg"
                                             alt="">
                                         <img class="icon_img"
-                                            src="https://www.figma.com/api/mcp/asset/a70db404-ce08-4a17-af87-c1bb40d0c76a"
+                                            src="./Work_Ryu/asset/icon_Yongsoon.png"
                                             alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
@@ -960,9 +960,9 @@
                                     </div><!-- //.chat_box -->
                                     <div class="like_box">
                                         <img class="heart_icon"
-                                            src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
-                                            data-active-src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-inactive-src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
+                                            src="./Work_Ryu/asset/icon_heart_unactive.svg"
+                                            data-active-src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-inactive-src="./Work_Ryu/asset/icon_heart_unactive.svg"
                                             alt="">
                                         <span class="like_count">1,187</span>
                                     </div><!-- //.like_box -->
@@ -984,10 +984,10 @@
                                 <div class="profile">
                                     <div class="profile_icon">
                                         <img class="icon_bg"
-                                            src="https://www.figma.com/api/mcp/asset/80e87da1-20be-43bb-89d3-7e0db1ef6b6c"
+                                            src="./Work_Ryu/asset/icon_bg_green.svg"
                                             alt="">
                                         <img class="icon_img"
-                                            src="https://www.figma.com/api/mcp/asset/ba5b7a69-fa2e-426c-a77a-4cf199c2834d"
+                                            src="./Work_Ryu/asset/icon_Yongsoon.png"
                                             alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
@@ -1002,9 +1002,9 @@
                                     </div><!-- //.chat_box -->
                                     <div class="like_box">
                                         <img class="heart_icon"
-                                            src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
-                                            data-active-src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-inactive-src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
+                                            src="./Work_Ryu/asset/icon_heart_unactive.svg"
+                                            data-active-src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-inactive-src="./Work_Ryu/asset/icon_heart_unactive.svg"
                                             alt="">
                                         <span class="like_count">945</span>
                                     </div><!-- //.like_box -->
@@ -1026,10 +1026,10 @@
                                 <div class="profile">
                                     <div class="profile_icon">
                                         <img class="icon_bg"
-                                            src="https://www.figma.com/api/mcp/asset/80e87da1-20be-43bb-89d3-7e0db1ef6b6c"
+                                            src="./Work_Ryu/asset/icon_bg_purple.svg"
                                             alt="">
                                         <img class="icon_img"
-                                            src="https://www.figma.com/api/mcp/asset/a70db404-ce08-4a17-af87-c1bb40d0c76a"
+                                            src="./Work_Ryu/asset/icon_Yongsoon.png"
                                             alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
@@ -1044,9 +1044,9 @@
                                     </div><!-- //.chat_box -->
                                     <div class="like_box">
                                         <img class="heart_icon active"
-                                            src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-active-src="https://www.figma.com/api/mcp/asset/cd975f70-29e7-416d-b948-0b0bf0741b0a"
-                                            data-inactive-src="https://www.figma.com/api/mcp/asset/e9a0c0f2-0487-481c-a08b-2d9ca19865b2"
+                                            src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-active-src="./Work_Ryu/asset/icon_heart_active.svg"
+                                            data-inactive-src="./Work_Ryu/asset/icon_heart_unactive.svg"
                                             alt="">
                                         <span class="like_count">782</span>
                                     </div><!-- //.like_box -->
