--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -260,8 +260,10 @@
 
 
     <section class="last-section">
-      <h2>signature works</h2>
-      <button class="more-btn">More</button>
+      <div class="h2All inner">
+        <h2>signature works</h2>
+        <a class="more-btn" href="">More</a>
+      </div>
       <div class="slide inner">
         <div class="swiper">
           <div class="swiper-wrapper">
@@ -288,7 +290,9 @@
     </section>
 
     <section class="onAir-section">
-      <h2 class="on-alr">ON-AIR</h2>
+      <div class="h2All inner">
+        <h2 class="on-alr">ON-AIR</h2>
+      </div>
       <div class="button-group">
         <button class="all">ALL</button>
         <button class="alr">AIR</button>
@@ -560,19 +564,19 @@
               <a href="#">Prev</a>
             </li>
             <li class="active">
-              <a href="">1</a>
+              1
             </li>
             <li>
-              <a href="#">2</a>
+              2
             </li>
             <li>
-              <a href="#">3</a>
+              3
             </li>
             <li>
-              <a href="#">4</a>
+              4
             </li>
             <li>
-              <a href="#">5</a>
+              5
             </li>
             <li>
               <a href="#">Next</a>
